# snowbird

./: .gitignore  DEPLOYMENT.md  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  seed.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_user_goals.py  0003_add_etf_classification.py  0004_add_dividend_reinvest.py  0005_add_dividend_tax_type.py  0006_user_owned_buckets.py
backend/app/: config.py  db.py  deps.py  main.py  security.py
backend/app/api/: accounts.py  analytics.py  auth.py  buckets.py  dividends.py  events.py  goals.py  holdings.py  market.py  orders.py  portfolio.py  reinvest.py
backend/app/data/: etf_classifications.json
backend/app/models/: __init__.py  account.py  activity.py  bucket.py  instrument.py  order.py  position.py  reinvest.py  snapshot.py  user.py  user_goal.py
backend/app/schemas/: account.py  analytics.py  auth.py  buckets.py  dividends.py  events.py  goals.py  holdings.py  market.py  orders.py  portfolio.py  reinvest.py
backend/app/services/: alpaca.py  analytics.py  buckets.py  dividends.py  events.py  finnhub.py  goals.py  (+5 more)
backend/tests/: conftest.py  test_activities_and_backfill.py  test_analytics.py  test_analytics_monthly_returns.py  test_api_smoke.py  test_buckets.py  test_buckets_ownership.py  test_bugfixes.py  test_dividend_tax_type.py  test_dividends.py  test_events.py  test_goals.py  test_instrument_sectors.py  test_market_data.py  test_models.py  test_portfolio_summary.py  test_reinvest.py  test_security.py
(+50 files in other folders)
